[package]
name = "tas_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde_json = "1.0"
tempfile = "3.6"
base64 = "0.21"
hex = "0.4"
rsa = { version = "0.9.8", features = ["sha2"] }
# 0.8 required by rsa
rand = "~0.8"
aes = "0.8.4"
cipher = { version = "0.4.4", features = ["block-padding", "alloc"] }
pretty-hex = "0.4.1"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
aes-gcm = "0.10.3"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
mockito = "0.31"
tempfile = "3.6"

#makes RSA key gen faster in dev mode
[profile.dev.package.num-bigint-dig]
opt-level = 3
